--- a/public/index.html
+++ b/public/index.html
@@ -25,17 +25,10 @@
 	</head>
 
 	<body>
-		<nav class="navbar navbar-expand-sm bg-light navbar-white" id="short">
-			<!-- Brand/logo -->
-			<a class="navbar-brand" href="#">
-				<img src="Cyborg.png" alt="logo" style="width: 40%" id="logos" />
-			</a>
-
-			<!-- Links -->
-		</nav>
-
 		<div class="bgimg">
-			<div class="topleft"></div>
+			<div class="topleft">
+				<img src="Cyborg.png" alt="logo" style="width: auto; height: 80px; margin: 20px" id="logos" />
+			</div>
 			<div class="middle">
 				<h2 id="lol">Cyborg Orientation 2k20</h2>
 				<hr />
