--- a/public/orientation.html
+++ b/public/orientation.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Cyborg: Orientation 2020</title>
+		<title>Orientation 2020 | 2020</title>
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
 			rel="stylesheet"
@@ -16,6 +16,11 @@
 			crossorigin="anonymous"
 		></script>
 		<script src="https://kit.fontawesome.com/8d2d337e02.js" crossorigin="anonymous"></script>
+
+		<!-- Favicon and touch icons -->
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+		<link rel="icon" href="favicon.ico" type="image/x-icon" />
+
 		<!-- The core Firebase JS SDK is always required and must be listed first -->
 		<script src="/__/firebase/8.1.2/firebase-app.js"></script>
 		<!-- TODO: Add SDKs for Firebase products that you want to use
@@ -23,8 +28,8 @@
 		<script src="/__/firebase/8.1.2/firebase-analytics.js"></script>
 		<!-- Initialize Firebase -->
 		<script src="/__/firebase/init.js"></script>
-		<link href="index.css" rel="stylesheet" />
-		<script src="index.js"></script>
+		<script defer src="index.js"></script>
+		<link href="orientation.css" rel="stylesheet" />
 	</head>
 	<body class="container-fluid p-0 m-0">
 		<nav class="navbar navbar-expand-sm bg-light navbar-white" id="short">
@@ -77,5 +82,6 @@
 				<p align="text-center">Registered under Student Activity Center(SAC)</p>
 			</div>
 		</footer>
+		<script src="orientation.js"></script>
 	</body>
 </html>
