Default youtube link updated

--- a/public/orientation.html
+++ b/public/orientation.html
@@ -46,7 +46,7 @@
 					id="youtube-frame"
 					width="100%"
 					height="100%"
-					src="https://www.youtube.com/embed/ffc-FIwGcu0"
+					src="https://www.youtube.com/embed/vwqR8CFElgQ?start=877"
 					frameborder="0"
 					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 					allowfullscreen
