--- a/public/orientation.html
+++ b/public/orientation.html
@@ -27,8 +27,11 @@
          https://firebase.google.com/docs/web/setup#available-libraries -->
 		<script src="/__/firebase/8.1.2/firebase-analytics.js"></script>
 		<!-- Initialize Firebase -->
-		<script src="/__/firebase/init.js"></script>
 		<script src="/__/firebase/8.1.2/firebase-firestore.js"></script>
+		<script src="/__/firebase/8.1.2/firebase-auth.js"></script>
+		<script src="/__/firebase/init.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.js"></script>
+		<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.css" />
 		<link href="orientation.css" rel="stylesheet" />
 	</head>
 	<body class="container-fluid p-0 m-0">
@@ -52,7 +55,22 @@
 					allowfullscreen
 				></iframe>
 			</div>
-			<div class="col-md-4 col-sm-12 m-0 p-0" id="interact-div">
+			<div class="col-md-4 col-sm-12 m-0 p-0" id="sign-in-div">
+				<p
+					id="sign-in-text"
+					style="color: whitesmoke; padding: 5px; margin: 10px; font-size: 1em; text-align: center"
+					hidden
+				>
+					Please sign in using your Official NIT Rourkela Microsoft Teams Account to access this section.<br />The mail
+					ID will be in the format rollNumber@nitrkl.ac.in
+				</p>
+				<i
+					id="loader-spinner"
+					class="fas fa-spinner fa-spin"
+					style="color: white; font-size: 3em; align-items: center; align-self: center; text-align: center"
+				></i>
+			</div>
+			<div class="col-md-4 col-sm-12 m-0 p-0" id="interact-div" hidden>
 				<iframe
 					id="interact-frame0"
 					src="https://app.sli.do/event/lflkcy0p"
