--- a/public/comingSoon.html
+++ b/public/comingSoon.html
@@ -74,7 +74,7 @@
 				</div>
 				<div id="sumq">
 					<a target="_blank"
-					href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MTFjNnRwaHJ2NjM2ODZpa2V2M3VocXZoMWEga2c1bXA0a2kwZXAybjJuY2tqZmU2NmJndm9AZw&amp;tmsrc=kg5mp4ki0ep2n2nckjfe66bgvo%40group.calendar.google.com" class="btn btn-info sub" role="button">Set a reminder</a>
+					href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MTFjNnRwaHJ2NjM2ODZpa2V2M3VocXZoMWEga2c1bXA0a2kwZXAybjJuY2tqZmU2NmJndm9AZw&amp;tmsrc=kg5mp4ki0ep2n2nckjfe66bgvo%40group.calendar.google.com" class="btn btn-info sub" role="button">Set reminder</a>
 				</div>
 				
 			</div>
