--- a/public/index.html
+++ b/public/index.html
@@ -63,11 +63,10 @@
 					</div>
 				</div>
 
-				<a
-					target="_blank"
-					href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MTFjNnRwaHJ2NjM2ODZpa2V2M3VocXZoMWEga2c1bXA0a2kwZXAybjJuY2tqZmU2NmJndm9AZw&amp;tmsrc=kg5mp4ki0ep2n2nckjfe66bgvo%40group.calendar.google.com"
-					><img border="0" src="https://www.google.com/calendar/images/ext/gc_button1_en.gif"
-				/></a>
+				<div id="sumq">
+					<a target="_blank"
+					href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MTFjNnRwaHJ2NjM2ODZpa2V2M3VocXZoMWEga2c1bXA0a2kwZXAybjJuY2tqZmU2NmJndm9AZw&amp;tmsrc=kg5mp4ki0ep2n2nckjfe66bgvo%40group.calendar.google.com" class="btn btn-info sub" role="button">Set reminder</a>
+				</div>
 			</div>
 		</div>
 
