--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
 					id="youtube-frame"
 					width="100%"
 					height="100%"
-					src="https://www.youtube.com/embed/vwqR8CFElgQ?start=877"
+					src="https://player.twitch.tv/?channel=cyborgnitr&parent=cyborgnitr.tech"
 					frameborder="0"
 					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 					allowfullscreen
@@ -73,7 +73,7 @@
 			<div class="col-md-4 col-sm-12 m-0 p-0" id="interact-div" hidden>
 				<iframe
 					id="interact-frame0"
-					src="https://app.sli.do/event/lflkcy0p"
+					src="https://app.sli.do/event/5esgpdzv/live/questions"
 					id="sum"
 					frameborder="0"
 					width="100%"
@@ -81,7 +81,7 @@
 				></iframe>
 				<iframe
 					id="interact-frame1"
-					src="https://www.menti.com/eeepjkvbgt"
+					src="https://www.menti.com/fjxs9ph3gv"
 					id="sum"
 					frameborder="0"
 					width="100%"
@@ -90,7 +90,7 @@
 				></iframe>
 				<iframe
 					id="interact-frame2"
-					src="https://www.menti.com/srm7jxv6hj"
+					src="https://www.menti.com/pxfq6x19ja"
 					id="sum"
 					frameborder="0"
 					width="100%"
