--- a/public/index.html
+++ b/public/index.html
@@ -1,82 +1,102 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
-		<!-- Required meta tags -->
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
-		<title>Coming Soon | Orientation 2020 | Cyborg</title>
-
-		<!-- CSS -->
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600" />
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Orientation 2020 | Cyborg</title>
 		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
 			rel="stylesheet"
-			href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-			integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+			integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
 			crossorigin="anonymous"
 		/>
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" />
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+			crossorigin="anonymous"
+		></script>
 		<script src="https://kit.fontawesome.com/8d2d337e02.js" crossorigin="anonymous"></script>
-		<script src="https://unpkg.com/scrollreveal"></script>
-
-		<link rel="stylesheet" href="comingSoon.css" />
 
 		<!-- Favicon and touch icons -->
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 		<link rel="icon" href="favicon.ico" type="image/x-icon" />
 
+		<!-- The core Firebase JS SDK is always required and must be listed first -->
 		<script src="/__/firebase/8.1.2/firebase-app.js"></script>
 		<!-- TODO: Add SDKs for Firebase products that you want to use
          https://firebase.google.com/docs/web/setup#available-libraries -->
 		<script src="/__/firebase/8.1.2/firebase-analytics.js"></script>
 		<!-- Initialize Firebase -->
+		<script src="/__/firebase/8.1.2/firebase-firestore.js"></script>
+		<script src="/__/firebase/8.1.2/firebase-auth.js"></script>
 		<script src="/__/firebase/init.js"></script>
-		<script src="/__/firebase/8.1.2/firebase-remote-config.js"></script>
-		<script defer src="index.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.js"></script>
+		<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.css" />
+		<link href="orientation.css" rel="stylesheet" />
 	</head>
+	<body class="container-fluid p-0 m-0">
+		<nav class="navbar navbar-expand-sm bg-light navbar-white" id="short">
+			<!-- Brand/logo -->
+			<a class="navbar-brand" href="#">
+				<img src="Cyborg.png" alt="logo" style="width: 50%" id="logos" />
+			</a>
 
-	<body>
-		<div class="bgimg">
-			<div class="topleft">
-				<a href="https://cyborg.nitrkl.ac.in/"
-					><img src="Cyborg.png" alt="logo" style="width: auto; height: 60px; margin: 20px" id="logos"
-				/></a>
+			<!-- Links -->
+		</nav>
+		<div class="row" style="height: 90vh; overflow: hidden">
+			<div class="col-md-8 col-sm-12 m-0 p-0" id="youtube-div">
+				<iframe
+					id="youtube-frame"
+					width="100%"
+					height="100%"
+					src="https://player.twitch.tv/?channel=cyborgnitr&parent=cyborgnitr.tech"
+					frameborder="0"
+					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+					allowfullscreen
+				></iframe>
 			</div>
-			<div class="middle">
-				<h2 id="lol">Cyborg Orientation 2k20</h2>
-				<hr />
-
-				<div class="row" id="tip">
-					<div class="column">
-						<div class="card">
-							<h3 id="days"></h3>
-						</div>
-					</div>
-
-					<div class="column">
-						<div class="card">
-							<h3 id="hours"></h3>
-						</div>
-					</div>
-
-					<div class="column">
-						<div class="card">
-							<h3 id="mins"></h3>
-						</div>
-					</div>
-
-					<div class="column">
-						<div class="card">
-							<h3 id="sec"></h3>
-						</div>
-					</div>
-
-				</div>
-				<div id="sumq">
-					<a target="_blank"
-					href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MTFjNnRwaHJ2NjM2ODZpa2V2M3VocXZoMWEga2c1bXA0a2kwZXAybjJuY2tqZmU2NmJndm9AZw&amp;tmsrc=kg5mp4ki0ep2n2nckjfe66bgvo%40group.calendar.google.com" class="btn btn-info sub" role="button">Set reminder</a>
-				</div>
-				
+			<div class="col-md-4 col-sm-12 m-0 p-0" id="sign-in-div">
+				<p
+					id="sign-in-text"
+					style="color: whitesmoke; padding: 5px; margin: 10px; font-size: 1em; text-align: center"
+					hidden
+				>
+					Please sign in using your Official NIT Rourkela Microsoft Teams Account to access this section.<br />The mail
+					ID will be in the format rollNumber@nitrkl.ac.in
+				</p>
+				<i
+					id="loader-spinner"
+					class="fas fa-spinner fa-spin"
+					style="color: white; font-size: 3em; align-items: center; align-self: center; text-align: center"
+				></i>
+			</div>
+			<div class="col-md-4 col-sm-12 m-0 p-0" id="interact-div" hidden>
+				<iframe
+					id="interact-frame0"
+					src="https://app.sli.do/event/5esgpdzv/live/questions"
+					id="sum"
+					frameborder="0"
+					width="100%"
+					height="100%"
+				></iframe>
+				<iframe
+					id="interact-frame1"
+					src="https://www.menti.com/fjxs9ph3gv"
+					id="sum"
+					frameborder="0"
+					width="100%"
+					height="100%"
+					hidden
+				></iframe>
+				<iframe
+					id="interact-frame2"
+					src="https://www.menti.com/pxfq6x19ja"
+					id="sum"
+					frameborder="0"
+					width="100%"
+					height="100%"
+					hidden
+				></iframe>
 			</div>
 		</div>
 
@@ -150,53 +170,6 @@
 			<!-- Copyright -->
 		</footer>
 		<!-- Footer -->
-
-		<script
-			src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-			crossorigin="anonymous"
-		></script>
-		<script
-			src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-			integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-			crossorigin="anonymous"
-		></script>
-		<script
-			src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-			integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-			crossorigin="anonymous"
-		></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-		<script>
-			var countDownDate = new Date("Dec 20, 2020 18:00:00").getTime();
-
-			// Update the count down every 1 second
-			var x = setInterval(function () {
-				// Get today's date and time
-				var now = new Date().getTime();
-
-				// Find the distance between now and the count down date
-				var distance = countDownDate - now;
-
-				// Time calculations for days, hours, minutes and seconds
-				var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-				var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-				var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-				var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-				// Output the result in an element with id="demo"
-				document.getElementById("days").innerHTML = days + "d ";
-				document.getElementById("hours").innerHTML = hours + "h ";
-				document.getElementById("mins").innerHTML = minutes + "m ";
-				document.getElementById("sec").innerHTML = seconds + "s ";
-
-				// If the count down is over, write some text
-				if (distance < 0) {
-					clearInterval(x);
-					document.getElementById("demo").innerHTML = "EXPIRED";
-				}
-			}, 1000);
-		</script>
+		<script src="orientation.js"></script>
 	</body>
 </html>
