--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
 			<div class="container-fluid text-center text-md-left">
 				<!-- Grid row -->
 				<div class="row">
-					<div class="col-md-1 mt-md-0"></div>
+					<!-- <div class="col-md-1 mt-md-0"></div> -->
 					<!-- Grid column -->
 					<div class="col-md-4 mt-md-0 mt-3">
 						<!-- Content -->
@@ -113,13 +113,15 @@
 						Club under Technical Society,<br />
 						SAC NIT Rourkela<br />
 						EC 440, EC building, NIT Rourkela. Pin-769008<br />
+						<br />
+						<br />
 					</div>
 					<!-- Grid column -->
 
-					<hr class="clearfix w-100 d-md-none pb-3" />
+					<!-- <hr class="clearfix w-100 d-md-none pb-3" /> -->
 
 					<!-- Grid column -->
-					<div class="col-md-3 mb-md-0 mb-3">
+					<div class="col-md-4 mb-md-0 mb-3">
 						<!-- Links -->
 						<h4 class="text-uppercase">Contact Us</h4>
 
